Bug 767186: Cache the keyPath for objectStores and indexes. r=bent