dom/indexedDB/test/unit/test_complex_keyPaths.js
@@ -86,6 +86,8 @@ function testSteps()
         ok(!("exception" in info), "shouldn't throw" + test);
         is(JSON.stringify(objectStore.keyPath), JSON.stringify(info.keyPath),
            "correct keyPath property" + test);
+        ok(objectStore.keyPath === objectStore.keyPath,
+           "object identity should be preserved");
         stores[indexName] = objectStore;
       } catch (e) {
         ok("exception" in info, "should throw" + test);
@@ -139,6 +141,8 @@ function testSteps()
         ok(!("exception" in info), "shouldn't throw" + test);
         is(JSON.stringify(index.keyPath), JSON.stringify(info.keyPath),
            "index has correct keyPath property" + test);
+        ok(index.keyPath === index.keyPath,
+           "object identity should be preserved");
         indexes[indexName] = index;
       } catch (e) {
         ok("exception" in info, "should throw" + test);
